--- a/learn-certs-pr/exams/az-400.yml
+++ b/learn-certs-pr/exams/az-400.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Examination
-title: Microsoft Azure DevOps-Lösungen
+title: Microsoft Azure DevOps-Lï¿½sungen
 metadata:
-  title: 'Prüfung AZ-400: Microsoft Azure DevOps-Lösungen'
-  description: 'Prüfung AZ-400: Microsoft Azure DevOps-Lösungen'
+  title: 'Prï¿½fung AZ-400: Microsoft Azure DevOps-Lï¿½sungen'
+  description: 'Prï¿½fung AZ-400: Microsoft Azure DevOps-Lï¿½sungen'
 uid: exam.ai-400
 displayName: AZ-400
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am Dienstag, 3. den Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/></div>
+  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prï¿½fung wurde am Dienstag, 3. den Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument ï¿½Skills measuredï¿½ herunter, um zu sehen, was sich geï¿½ndert hat.<br/></div>
 
-  Kandidaten für diese Prüfung sind DevOps-Profis, die Menschen, Prozesse und Technologien kombinieren, um kontinuierlich wertvolle Produkte und Dienstleistungen zu liefern, die den Bedürfnissen der Endbenutzer und den Unternehmenszielen entsprechen. Die Fachleute von DevOps optimieren die Bereitstellung, indem sie die Abläufe optimieren, die Kommunikation und Zusammenarbeit verbessern und die Automatisierung realisieren. Sie entwickeln und implementieren Strategien für Anwendungscode und Infrastruktur, die kontinuierliche Integration, Tests, Bereitstellung,  Überwachung und Rückmeldung ermöglichen.
+  Kandidaten fï¿½r diese Prï¿½fung sind DevOps-Profis, die Menschen, Prozesse und Technologien kombinieren, um kontinuierlich wertvolle Produkte und Dienstleistungen zu liefern, die den Bedï¿½rfnissen der Endbenutzer und den Unternehmenszielen entsprechen. Die Fachleute von DevOps optimieren die Bereitstellung, indem sie die Ablï¿½ufe optimieren, die Kommunikation und Zusammenarbeit verbessern und die Automatisierung realisieren. Sie entwickeln und implementieren Strategien fï¿½r Anwendungscode und Infrastruktur, die kontinuierliche Integration, Tests, Bereitstellung,  ï¿½berwachung und Rï¿½ckmeldung ermï¿½glichen.
 
-  Die Kandidaten müssen mit agilen Praktiken vertraut sein. Sie müssen sowohl mit der Azure-Administration als auch mit der Azure-Entwicklung vertraut sein und Experten in mindestens einem dieser Bereiche sein. Azure DevOps-Profis müssen in der Lage sein, DevOps-Praktiken für Versionskontrolle, Compliance, Infrastruktur als Code, Konfigurationsmanagement, Build, Release und Testing unter Verwendung von Azure-Technologien zu entwickeln und umzusetzen.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, eine DevOps-Strategie zu entwickeln und die folgenden Punkte umzusetzen: DevOps Entwicklungsprozesse, Abhängigkeitsmanagement, Anwendungsinfrastruktur und kontinuierliche Integration, Bereitstellung und Feedback.'
+  Die Kandidaten mï¿½ssen mit agilen Praktiken vertraut sein. Sie mï¿½ssen sowohl mit der Azure-Administration als auch mit der Azure-Entwicklung vertraut sein und Experten in mindestens einem dieser Bereiche sein. Azure DevOps-Profis mï¿½ssen in der Lage sein, DevOps-Praktiken fï¿½r Versionskontrolle, Compliance, Infrastruktur als Code, Konfigurationsmanagement, Build, Release und Testing unter Verwendung von Azure-Technologien zu entwickeln und umzusetzen.
+subTitle: 'Diese Prï¿½fung misst Ihre Fï¿½higkeit, eine DevOps-Strategie zu entwickeln und die folgenden Punkte umzusetzen: DevOps Entwicklungsprozesse, Abhï¿½ngigkeitsmanagement, Anwendungsinfrastruktur und kontinuierliche Integration, Bereitstellung und Feedback.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VP8d
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-400?utm_source=microsoft&amp;utm_medium=certpage&amp;utm_campaign=msofficialpractice
@@ -24,7 +24,7 @@ locales:
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wurde am Dienstag, den 3. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prï¿½fung wurde am Dienstag, den 3. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument ï¿½Skills measuredï¿½ herunter, um zu sehen, was sich geï¿½ndert hat.
 - Entwurf einer DevOps Strategie (20-25%)
 - Implementieren von DevOps Entwicklungsprozessen (20-25%)
 - Implementieren von kontinuierlicher Integration (10-15%)
@@ -38,7 +38,7 @@ products:
 - azure
 - azure-devops
 - azure-kubernetes-service
-- azure-container-iinstances
+- azure-container-instances
 - azure-automation
 paths:
 - uid: learn.azdo.evolve-your-devops-practices
@@ -60,20 +60,20 @@ resources:
   description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter Azure DevOps Engineering Experte zu werden'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE41muG
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich ï¿½ber alle Zertifizierungen in einem ï¿½bersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfung wiederholen
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Prï¿½fung wiederholen
+  description: Sehen Sie sich zwei groï¿½artige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhï¿½hen.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstï¿½tzung bei Zertifizierungsprï¿½fungen
   description: Erhalten Sie Hilfe in Microsoft Support-Foren. Werktags (Montag-Freitag) wird Ihnen ein Forenmoderator antworten.
   href: ../help.md
 - title: Dashboard zur Zertifizierung
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  description: ï¿½berprï¿½fen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/de-de/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Unterkï¿½nfte anfordern
+  description: Erfahren Sie mehr ï¿½ber die Anforderung einer Unterkunft fï¿½r Ihre Prï¿½fung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+- title: Prï¿½fungsrichtlinien und FAQs
+  description: Lesen Sie die Prï¿½fungsrichtlinien und die hï¿½ufig gestellten Fragen.
   href: ../certification-exam-policies.md
