--- a/learn-certs-pr/exams/az-500.yml
+++ b/learn-certs-pr/exams/az-500.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Examination
 title: Microsoft Azure Security Technologies
 metadata:
-  title: 'Prüfung AZ-500: Microsoft Azure Security Technologies'
-  description: 'Prüfung AZ-500: Microsoft Azure Security Technologies'
+  title: 'Prï¿½fung AZ-500: Microsoft Azure Security Technologies'
+  description: 'Prï¿½fung AZ-500: Microsoft Azure Security Technologies'
 uid: exam.ai-500
 displayName: AZ-500
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am Mittwoch, den 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/></div>
+  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prï¿½fung wurde am Mittwoch, den 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument ï¿½Skills measuredï¿½ herunter, um zu sehen, was sich geï¿½ndert hat.<br/></div>
 
-  Kandidaten für diese Prüfung sind Microsoft Azure-Security-Engineers, die Sicherheitskontrollen implementieren, die Sicherheitsstandards aufrecht erhalten, Identität und Zugriff verwalten und Daten, Anwendungen und Netzwerke schützen. Kandidaten identifizieren und beheben Schwachstellen mithilfe einer Vielzahl von Sicherheitstools, implementieren Threat Protection und reagieren auf Eskalationen von Sicherheitsvorfällen. Als Microsoft Azure-Sicherheitstechniker sind die Kandidaten oft Teil eines größeren Teams, das sich der Cloud-basierten Verwaltung und Sicherheit widmet, und können auch hybride Umgebungen als Teil einer End-to-End-Infrastruktur sichern.
+  Kandidaten fï¿½r diese Prï¿½fung sind Microsoft Azure-Security-Engineers, die Sicherheitskontrollen implementieren, die Sicherheitsstandards aufrecht erhalten, Identitï¿½t und Zugriff verwalten und Daten, Anwendungen und Netzwerke schï¿½tzen. Kandidaten identifizieren und beheben Schwachstellen mithilfe einer Vielzahl von Sicherheitstools, implementieren Threat Protection und reagieren auf Eskalationen von Sicherheitsvorfï¿½llen. Als Microsoft Azure-Sicherheitstechniker sind die Kandidaten oft Teil eines grï¿½ï¿½eren Teams, das sich der Cloud-basierten Verwaltung und Sicherheit widmet, und kï¿½nnen auch hybride Umgebungen als Teil einer End-to-End-Infrastruktur sichern.
 
-  Die Kandidaten für diese Prüfung sollten über gute Kenntnisse in Skripting und Automatisierung, ein tiefes Verständnis von Netzwerken, Virtualisierung und der Cloud N-Tier-Architektur sowie über gute Kenntnisse in Cloud-Funktionen, Microsoft Azure-Produkten und -Services sowie anderen Microsoft-Produkten und -Services verfügen.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Identitäts- und Zugriffsmanagement, Platform-Protection implementieren, Sicherheitsmaßnahmen verwalten und Daten und Anwendungen schützen.'
+  Die Kandidaten fï¿½r diese Prï¿½fung sollten ï¿½ber gute Kenntnisse in Skripting und Automatisierung, ein tiefes Verstï¿½ndnis von Netzwerken, Virtualisierung und der Cloud N-Tier-Architektur sowie ï¿½ber gute Kenntnisse in Cloud-Funktionen, Microsoft Azure-Produkten und -Services sowie anderen Microsoft-Produkten und -Services verfï¿½gen.
+subTitle: 'Diese Prï¿½fung misst Ihre Fï¿½higkeit, die folgenden technischen Aufgaben zu erfï¿½llen: Identitï¿½ts- und Zugriffsmanagement, Platform-Protection implementieren, Sicherheitsmaï¿½nahmen verwalten und Daten und Anwendungen schï¿½tzen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC70
 practiceTestUrl: https://www.mindhub.com/p/MU-AZ-500?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -24,17 +24,17 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am Mittwoch, 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.
-- Verwalten von Identität und Zugriff (20-25%)
+- Der Inhalt dieser Prï¿½fung wurde am Mittwoch, 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument ï¿½Skills measuredï¿½ herunter, um zu sehen, was sich geï¿½ndert hat.
+- Verwalten von Identitï¿½t und Zugriff (20-25%)
 - Plattform-Schutz implementieren (35-40%)
-- Verwaltung von Sicherheitsvorgängen (15-20%)
+- Verwaltung von Sicherheitsvorgï¿½ngen (15-20%)
 - Daten und Anwendungen sichern (30-35%)
 roles:
 - security-engineer
 products:
 - azure
-- azur-active-directory
-- azur-richtlinie
+- azure-active-directory
+- azure-policy
 - azure-virtual-network
 - azure-monitor
 - azure-key-vault
@@ -45,20 +45,20 @@ relatedCertifications:
     uid: certification.azure-security-engineer
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und ZertifizierungsleitfWerktagsaden.
+  description: Informieren Sie sich ï¿½ber die Zertifizierungen in einem ï¿½bersichtlichen Schulungs- und ZertifizierungsleitfWerktagsaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfung wiederholen
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Prï¿½fung wiederholen
+  description: Sehen Sie sich zwei groï¿½artige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhï¿½hen.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstï¿½tzung bei Zertifizierungsprï¿½fungen
   description: Erhalten Sie Hilfe in Microsoft Support-Foren. Werktags (Montag-Freitag) wird Ihnenein Forenmoderator antworten.
   href: ../help.md
 - title: Dashboard zur Zertifizierung
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  description: ï¿½berprï¿½fen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/de-de/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Unterkï¿½nfte anfordern
+  description: Erfahren Sie mehr ï¿½ber die Anforderung einer Unterkunft fï¿½r Ihre Prï¿½fung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+- title: Prï¿½fungsrichtlinien und FAQs
+  description: Lesen Sie die Prï¿½fungsrichtlinien und die hï¿½ufig gestellten Fragen.
   href: ../certification-exam-policies.md
