--- a/learn-certs-pr/exams/az-103.yml
+++ b/learn-certs-pr/exams/az-103.yml
@@ -1,19 +1,19 @@
 ### YamlMime:Examination
 title: Microsoft Azure Administrator
 metadata:
-  title: 'Prüfung AZ-103: Microsoft Azure Administrator'
-  description: 'Prüfung AZ-103: Microsoft Azure Administrator'
+  title: 'Prï¿½fung AZ-103: Microsoft Azure Administrator'
+  description: 'Prï¿½fung AZ-103: Microsoft Azure Administrator'
 uid: exam.az-103
 displayName: AZ-103
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am Mittwoch, 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/></div>
+  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prï¿½fung wurde am Mittwoch, 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument ï¿½Skills measuredï¿½ herunter, um zu sehen, was sich geï¿½ndert hat.<br/></div>
 
-  Ab dem 1. Mai 2019 müssen Sie nur noch die Prüfung AZ-103 ablegen, um diese Zertifizierung zu erhalten. Diese neue Prüfung kombiniert die Kompetenzen von AZ-100 und AZ-101 (die am 1. Mai 2019 aus dem Programm genommen wurden), während der Großteil der neuen Prüfung aus AZ-100 stammt.
+  Ab dem 1. Mai 2019 mï¿½ssen Sie nur noch die Prï¿½fung AZ-103 ablegen, um diese Zertifizierung zu erhalten. Diese neue Prï¿½fung kombiniert die Kompetenzen von AZ-100 und AZ-101 (die am 1. Mai 2019 aus dem Programm genommen wurden), wï¿½hrend der Groï¿½teil der neuen Prï¿½fung aus AZ-100 stammt.
 
-  Kandidaten für diese Prüfung sind Azure-Administratoren, die Cloud-Services verwalten, die Speicher-, Sicherheits-, Netzwerk- und Cloud-Funktionen umfassen. Kandidaten haben ein tiefes Verständnis für jeden Service über den gesamten IT-Lebenszyklus hinweg und nehmen Anfragen für Infrastrukturdienste, Anwendungen und Umgebungen entgegen. Sie geben Empfehlungen zur Nutzung von Diensten für eine optimale Leistung und Skalierung sowie zur Bereitstellung, Größe, Überwachung und Anpassung von Ressourcen.
+  Kandidaten fï¿½r diese Prï¿½fung sind Azure-Administratoren, die Cloud-Services verwalten, die Speicher-, Sicherheits-, Netzwerk- und Cloud-Funktionen umfassen. Kandidaten haben ein tiefes Verstï¿½ndnis fï¿½r jeden Service ï¿½ber den gesamten IT-Lebenszyklus hinweg und nehmen Anfragen fï¿½r Infrastrukturdienste, Anwendungen und Umgebungen entgegen. Sie geben Empfehlungen zur Nutzung von Diensten fï¿½r eine optimale Leistung und Skalierung sowie zur Bereitstellung, Grï¿½ï¿½e, ï¿½berwachung und Anpassung von Ressourcen.
 
-  Die Kandidaten für diese Prüfung sollten über Kenntnisse in der Verwendung von PowerShell, der Befehlszeilenschnittstelle, dem Azure Portal, ARM-Vorlagen, Betriebssystemen, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen und Netzwerken verfügen.
-subTitle: 'Ab dem 1. Mai 2019 müssen Sie nur noch die Prüfung AZ-103 ablegen, um diese Zertifizierung zu erhalten. Diese neue Prüfung kombiniert die Kompetenzen von AZ-100 und AZ-101 (die am 1. Mai 2019 aus dem Programm genommen wurden), während der Großteil der neuen Prüfung aus AZ-100 stammt. Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Verwalten von Azure-Abonnements und -Ressourcen, Implementieren und Verwalten von Speicher, Bereitstellen und Verwalten von virtuellen Maschinen (VMs), Konfigurieren und Verwalten virtueller Netzwerke und Verwalten von Identitäten.'
+  Die Kandidaten fï¿½r diese Prï¿½fung sollten ï¿½ber Kenntnisse in der Verwendung von PowerShell, der Befehlszeilenschnittstelle, dem Azure Portal, ARM-Vorlagen, Betriebssystemen, Virtualisierung, Cloud-Infrastruktur, Speicherstrukturen und Netzwerken verfï¿½gen.
+subTitle: 'Ab dem 1. Mai 2019 mï¿½ssen Sie nur noch die Prï¿½fung AZ-103 ablegen, um diese Zertifizierung zu erhalten. Diese neue Prï¿½fung kombiniert die Kompetenzen von AZ-100 und AZ-101 (die am 1. Mai 2019 aus dem Programm genommen wurden), wï¿½hrend der Groï¿½teil der neuen Prï¿½fung aus AZ-100 stammt. Diese Prï¿½fung misst Ihre Fï¿½higkeit, die folgenden technischen Aufgaben zu erfï¿½llen: Verwalten von Azure-Abonnements und -Ressourcen, Implementieren und Verwalten von Speicher, Bereitstellen und Verwalten von virtuellen Maschinen (VMs), Konfigurieren und Verwalten virtueller Netzwerke und Verwalten von Identitï¿½ten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUR
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-103?utm_source=microsoft&amp;utm_medium=certpage&amp;utm_campaign=msofficialpractice
@@ -26,12 +26,12 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am Mittwoch, 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prï¿½fung wurde am Mittwoch, 4. Dezember 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument ï¿½Skills measuredï¿½ herunter, um zu sehen, was sich geï¿½ndert hat.
 - Verwaltung von Azure-Abonnements und Ressourcen (15-20%)
 - Implementieren und Verwalten von Speicherplatz (15-20%)
 - Bereitstellen und Verwalten von virtuellen Maschinen (VMs) (15-20%)
 - Virtuelle Netzwerke konfigurieren und verwalten (30-35%)
-- Identitäten verwalten (15-20%)
+- Identitï¿½ten verwalten (15-20%)
 roles:
 - administrator
 products:
@@ -42,7 +42,7 @@ products:
 - azure-virtual-network
 - azure-resource-manager
 courses:
-- uid: course.ai-103t00
+- uid: course.az-103t00
 paths:
 - uid: learn.secure-your-cloud-data
 - uid: learn.administer-infrastructure-resources-in-azure
@@ -56,20 +56,20 @@ resources:
   description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter: Azure Administrator Associate.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtY7Z
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich ï¿½ber die Zertifizierungen in einem ï¿½bersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfung erneut durchführen
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Prï¿½fung erneut durchfï¿½hren
+  description: Sehen Sie sich zwei groï¿½artige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhï¿½hen.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstï¿½tzung bei Zertifizierungsprï¿½fungen
   description: Erhalten Sie Hilfe in Microsoft Support-Foren. Werktags (Motag-Freitag) wird Ihnen ein Forenmoderator antworten.
   href: ../help.md
 - title: Dashboard zur Zertifizierung
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  description: ï¿½berprï¿½fen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/de-de/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Unterkï¿½nfte anfordern
+  description: Erfahren Sie mehr ï¿½ber die Anforderung einer Unterkunft fï¿½r Ihre Prï¿½fung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+- title: Prï¿½fungsrichtlinien und FAQs
+  description: Lesen Sie die Prï¿½fungsrichtlinien und die hï¿½ufig gestellten Fragen.
   href: ../certification-exam-policies.md
