--- a/learn-certs-pr/exams/az-203.yml
+++ b/learn-certs-pr/exams/az-203.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Examination
-title: Entwickeln von Lösungen für Microsoft Azure
+title: Entwickeln von Lï¿½sungen fï¿½r Microsoft Azure
 metadata:
-  title: 'Prüfung AZ-203: Entwickeln von Lösungen für Microsoft Azure'
-  description: 'Prüfung AZ-203: Entwickeln von Lösungen für Microsoft Azure'
+  title: 'Prï¿½fung AZ-203: Entwickeln von Lï¿½sungen fï¿½r Microsoft Azure'
+  description: 'Prï¿½fung AZ-203: Entwickeln von Lï¿½sungen fï¿½r Microsoft Azure'
 uid: exam.ai-203
 displayName: AZ-203
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am Mittwoch, 6. November 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prï¿½fung wurde am Mittwoch, 6. November 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument ï¿½Skills measuredï¿½ herunter, um zu sehen, was sich geï¿½ndert hat.<br/><br/></div>
   
-  Kandidaten für diese Prüfung sind Azure Entwickler, die Cloud-Lösungen wie Anwendungen und Services entwerfen und bauen. Sie nehmen an allen Phasen der Entwicklung teil, vom Lösungsdesign über die Entwicklung und Bereitstellung bis hin zu Test und Wartung. Sie arbeiten mit Cloud Solution Architects, Cloud DBAs, Cloud Administratoren und Clients zusammen, um die Lösung zu implementieren.
+  Kandidaten fï¿½r diese Prï¿½fung sind Azure Entwickler, die Cloud-Lï¿½sungen wie Anwendungen und Services entwerfen und bauen. Sie nehmen an allen Phasen der Entwicklung teil, vom Lï¿½sungsdesign ï¿½ber die Entwicklung und Bereitstellung bis hin zu Test und Wartung. Sie arbeiten mit Cloud Solution Architects, Cloud DBAs, Cloud Administratoren und Clients zusammen, um die Lï¿½sung zu implementieren.
   <br/>
 
-  Die Kandidaten sollten in der Entwicklung von Anwendungen und Diensten unter Verwendung von Azure-Tools und -Technologien, einschließlich Speicherung, Sicherheit, Berechnung und Kommunikation, versiert sein.
+  Die Kandidaten sollten in der Entwicklung von Anwendungen und Diensten unter Verwendung von Azure-Tools und -Technologien, einschlieï¿½lich Speicherung, Sicherheit, Berechnung und Kommunikation, versiert sein.
 
-  Die Kandidaten müssen über mindestens ein Jahr Erfahrung im Entwickeln skalierbarer Lösungen in allen Phasen der Softwareentwicklung verfügen und über Kenntnisse in mindestens einer Cloud-gestützten Programmiersprache verfügen.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Entwickeln von Azure Infrastructure as a Service Compute-Lösungen; Entwickeln von Azure Platform as a Service Compute-Lösungen; Entwickeln für Azure Storage; Implementieren von Azure Security; Überwachung, Fehlerbehebung und Optimieren von Lösungen; Verbinden mit Azure Services und Drittanbieter-Diensten.'
+  Die Kandidaten mï¿½ssen ï¿½ber mindestens ein Jahr Erfahrung im Entwickeln skalierbarer Lï¿½sungen in allen Phasen der Softwareentwicklung verfï¿½gen und ï¿½ber Kenntnisse in mindestens einer Cloud-gestï¿½tzten Programmiersprache verfï¿½gen.
+subTitle: 'Diese Prï¿½fung misst Ihre Fï¿½higkeit, die folgenden technischen Aufgaben zu erfï¿½llen: Entwickeln von Azure Infrastructure as a Service Compute-Lï¿½sungen; Entwickeln von Azure Platform as a Service Compute-Lï¿½sungen; Entwickeln fï¿½r Azure Storage; Implementieren von Azure Security; ï¿½berwachung, Fehlerbehebung und Optimieren von Lï¿½sungen; Verbinden mit Azure Services und Drittanbieter-Diensten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VEHC
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-203?utm_source=microsoft&amp;utm_medium=certpage&amp;utm_campaign=msofficialpractice
@@ -27,12 +27,12 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am Mittwoch, 6. November 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.
-- Entwicklung von Azure Infrastructure as a Service Computing-Lösungen (10-15%)
-- Entwickeln von Azure Platform as a  Service-Computing-Lösungen (20-25%)
-- Entwickeln für Azure-Storage (15-20%)
+- Der Inhalt dieser Prï¿½fung wurde am Mittwoch, 6. November 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument ï¿½Skills measuredï¿½ herunter, um zu sehen, was sich geï¿½ndert hat.
+- Entwicklung von Azure Infrastructure as a Service Computing-Lï¿½sungen (10-15%)
+- Entwickeln von Azure Platform as a  Service-Computing-Lï¿½sungen (20-25%)
+- Entwickeln fï¿½r Azure-Storage (15-20%)
 - Implementieren der Azure-Security(10-15%)
-- Überwachung, Fehlerbehebung und Optimierung von Azure-Lösungen (10-15%)
+- ï¿½berwachung, Fehlerbehebung und Optimierung von Azure-Lï¿½sungen (10-15%)
 - Verbindung zu Azure-Diensten und Diensten von Drittanbietern herstellen und nutzen (20-25%)
 roles:
 - developer
@@ -41,11 +41,11 @@ products:
 - azure-virtual-machines
 - azure-storage
 - azure-active-directory
-- azure-cognitive services
-- azure-ressource-manager
+- azure-cognitive-services
+- azure-resource-manager
 - azure-app-service
 - azure-bot-service
-- azur-functions
+- azure-functions
 - azure-logic-apps
 exams:
 - uid: exam.az-202
@@ -77,20 +77,20 @@ resources:
   description: 'Entdecken Sie die Schulungsressourcen, um ein Microsoft zertifizierter: Azure Developer Associate zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQqM
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich ï¿½ber die Zertifizierungen in einem ï¿½bersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfung wiederholen
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Prï¿½fung wiederholen
+  description: Sehen Sie sich zwei groï¿½artige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhï¿½hen.
   href: ../deals.md
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstï¿½tzung bei Zertifizierungsprï¿½fungen
   description: Erhalten Sie Hilfe in Microsoft Support-Foren. Werktags (Montg-Freitag) wird Ihnen ein Forenmoderatorantworten.
   href: ../help.md
 - title: Dashboard zur Zertifizierung
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  description: ï¿½berprï¿½fen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/de-de/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Unterkï¿½nfte anfordern
+  description: Erfahren Sie mehr ï¿½ber die Anforderung einer Unterkunft fï¿½r Ihre Prï¿½fung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+- title: Prï¿½fungsrichtlinien und FAQs
+  description: Lesen Sie die Prï¿½fungsrichtlinien und die hï¿½ufig gestellten Fragen.
   href: ../certification-exam-policies.md
