--- a/learn-certs-pr/exams/az-900.yml
+++ b/learn-certs-pr/exams/az-900.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Examination
 title: Microsoft Azure Fundamentals
 metadata:
-  title: 'Prüfung AZ-900: Microsoft Azure Fundamentals'
-  description: 'Prüfung AZ-900: Microsoft Azure Fundamentals'
+  title: 'Prï¿½fung AZ-900: Microsoft Azure Fundamentals'
+  description: 'Prï¿½fung AZ-900: Microsoft Azure Fundamentals'
 uid: exam.ai-900
 displayName: AZ-900
 summary: |-
-  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am Mittwoch, den 23. Oktober 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/></div>
+  <div style='color&#58; red; font-weight&#58; bold;'>Der Inhalt dieser Prï¿½fung wurde am Mittwoch, den 23. Oktober 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument ï¿½Skills measuredï¿½ herunter, um zu sehen, was sich geï¿½ndert hat.<br/></div>
 
-  Diese Prüfung richtet sich an Kandidaten, die grundlegende Kenntnisse über Cloud Services und deren Bereitstellung mit Microsoft Azure nachweisen möchten. Die Prüfung richtet sich an Kandidaten mit nicht-technischem Hintergrund, die beispielsweise mit dem Vertrieb oder der Beschaffung von Cloud-basierten Lösungen und Services zu tun haben oder sich mit Cloud-basierten Lösungen und Services beschäftigen, sowie an Kandidten mit technischem Hintergrund, die ihre grundlegenden Kenntnisse über Cloud Services überprüfen müssen. Technische IT-Erfahrung ist nicht erforderlich, jedoch sind allgemeine IT-Kenntnisse und Erfahrungen von Vorteil.
+  Diese Prï¿½fung richtet sich an Kandidaten, die grundlegende Kenntnisse ï¿½ber Cloud Services und deren Bereitstellung mit Microsoft Azure nachweisen mï¿½chten. Die Prï¿½fung richtet sich an Kandidaten mit nicht-technischem Hintergrund, die beispielsweise mit dem Vertrieb oder der Beschaffung von Cloud-basierten Lï¿½sungen und Services zu tun haben oder sich mit Cloud-basierten Lï¿½sungen und Services beschï¿½ftigen, sowie an Kandidten mit technischem Hintergrund, die ihre grundlegenden Kenntnisse ï¿½ber Cloud Services ï¿½berprï¿½fen mï¿½ssen. Technische IT-Erfahrung ist nicht erforderlich, jedoch sind allgemeine IT-Kenntnisse und Erfahrungen von Vorteil.
 
-  Diese Prüfung kann als optionaler erster Schritt unternommen werden, um mehr über Cloud Services zu erfahren und wie diese Konzepte von Microsoft Azure veranschaulicht werden. Sie kann als Vorstufe zu Microsoft Azure oder Microsoft Cloud Services Prüfungen verwendet werden. Obwohl es ein vorteilhafter erster Schritt wäre, das Wissen auf grundlegendem Niveau zu überprüfen, ist die Teilnahme an dieser Prüfung keine Voraussetzung für die Teilnahme an anderen Zertifizierungen auf Grundlage von Azure.
-subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden Konzepte zu verstehen: Cloud-Konzepte; Core Azure Services; Sicherheit, Datenschutz, Compliance, Trust und Azure-Preisgestaltung und -Support.'
+  Diese Prï¿½fung kann als optionaler erster Schritt unternommen werden, um mehr ï¿½ber Cloud Services zu erfahren und wie diese Konzepte von Microsoft Azure veranschaulicht werden. Sie kann als Vorstufe zu Microsoft Azure oder Microsoft Cloud Services Prï¿½fungen verwendet werden. Obwohl es ein vorteilhafter erster Schritt wï¿½re, das Wissen auf grundlegendem Niveau zu ï¿½berprï¿½fen, ist die Teilnahme an dieser Prï¿½fung keine Voraussetzung fï¿½r die Teilnahme an anderen Zertifizierungen auf Grundlage von Azure.
+subTitle: 'Diese Prï¿½fung misst Ihre Fï¿½higkeit, die folgenden Konzepte zu verstehen: Cloud-Konzepte; Core Azure Services; Sicherheit, Datenschutz, Compliance, Trust und Azure-Preisgestaltung und -Support.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUY
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-900?utm_source=microsoft&amp;utm_medium=certpage&amp;utm_campaign=msofficialpractice
@@ -24,7 +24,7 @@ locales:
 levels:
 - beginner
 skills:
-- Der Inhalt dieser Prüfung wurde am Mittwoch, den 23. Oktober 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prï¿½fung wurde am Mittwoch, den 23. Oktober 2019 aktualisiert. Bitte laden Sie das untenstehende Dokument ï¿½Skills measuredï¿½ herunter, um zu sehen, was sich geï¿½ndert hat.
 - Kenntnisse von Cloud Konzepten (15-20%)
 - Kenntnisse der Core Azure Services (30-35%)
 - Kenntnisse von Sicherheit, Datenschutz, Compliance und Trust (25-30%)
@@ -32,7 +32,7 @@ skills:
 roles:
 - developer
 products:
-- Azure
+- azure
 courses:
 - uid: course.az-900t01
 paths:
@@ -45,17 +45,17 @@ resources:
   description: 'Entdecken Sie die Schulungsressourcen, um von Microsoft in Azure Fundamentals zertifiziert zu werden.'
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE38YZj
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich ï¿½ber die Zertifizierungen in einem ï¿½bersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Unterstützung bei Zertifizierungsprüfungen
+- title: Unterstï¿½tzung bei Zertifizierungsprï¿½fungen
   description: Erhalten Sie Hilfe in Microsoft Support-Foren.  Werktags (Montag-Freitag) wird Ihnen ein Forenmoderator antworten.
   href: ../help.md
 - title: Dashboard zur Zertifizierung
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  description: ï¿½berprï¿½fen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/de-de/learning/dashboard.aspx
-- title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+- title: Unterkï¿½nfte anfordern
+  description: Erfahren Sie mehr ï¿½ber die Anforderung einer Unterkunft fï¿½r Ihre Prï¿½fung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
-- title: Prüfungsrichtlinien und FAQs
-  description: Lesen Sie die Prüfungsrichtlinien und die häufig gestellten Fragen.
+- title: Prï¿½fungsrichtlinien und FAQs
+  description: Lesen Sie die Prï¿½fungsrichtlinien und die hï¿½ufig gestellten Fragen.
   href: ../certification-exam-policies.md
