fixed special chars

--- a/learn-certs-pr/mos-excel-2016-expert.yml
+++ b/learn-certs-pr/mos-excel-2016-expert.yml
@@ -6,8 +6,8 @@ metadata:
 uid: certification.mos-excel-2016-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
-  Diese Zertifizierung zeigt, dass Sie fortgeschrittene Fähigkeiten in Key-Office-Programme durch den Erwerb einer Microsoft Office Specialist Expert-Zertifizierung haben.
-subTitle: Diese Zertifizierung zeigt, dass Sie fortgeschrittene Fähigkeiten in Key-Office-Programme durch den Erwerb einer Microsoft Office Specialist Expert-Zertifizierung haben.
+  Diese Zertifizierung zeigt, dass Sie fortgeschrittene F&#xE4;higkeiten in Key-Office-Programme durch den Erwerb einer Microsoft Office Specialist Expert-Zertifizierung haben.
+subTitle: Diese Zertifizierung zeigt, dass Sie fortgeschrittene F&#xE4;higkeiten in Key-Office-Programme durch den Erwerb einer Microsoft Office Specialist Expert-Zertifizierung haben.
 levels:
 - advanced
 skills:
@@ -21,14 +21,14 @@ exams:
 - uid: exam.77-728
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
-  description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
+  description: Informieren Sie sich &#xFC;ber alle Zertifizierungen in einem &#xFC;bersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfungswiederholung
-  description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
+- title: Pr&#xFC;fungswiederholung
+  description: Sehen Sie sich zwei gro&#xDF;artige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erh&#xF6;hen.
   href: deals.md
-- title: Unterstützung fur Zertifizierung
+- title: Unterst&#xFC;tzung fur Zertifizierung
   description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird an einem Werktag, Montag-Freitag, antworten.
   href: help.md
 - title: Dashboard zur Zertifizierung
-  description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
+  description: &#xDC;berpr&#xFC;fen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/de-de/learning/dashboard.aspx
