--- a/learn-certs-pr/microsoft-office-specialist-expert-certification-2016.yml
+++ b/learn-certs-pr/microsoft-office-specialist-expert-certification-2016.yml
@@ -1,9 +1,9 @@
 ### YamlMime:Certification
-title: 'Microsoft Office Specialist: Microsoft Word 2016 Expert'
+title: 'Microsoft Office Specialist: Microsoft Office 2016 Expert'
 metadata:
-  title: 'Microsoft Office Specialist: Microsoft Word 2016 Expert'
-  description: 'Microsoft Office Specialist: Microsoft Word 2016 Expert'
-uid: certification.mos-word-2016-expert
+  title: 'Microsoft Office Specialist: Microsoft Office 2016 Expert'
+  description: 'Microsoft Office Specialist: Microsoft Office 2016 Expert'
+uid: certification.microsoft-office-specialist-expert-certification-2016
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
   Diese Zertifizierung zeigt, dass Sie fortgeschrittene Fähigkeiten in Key-Office-Programme durch den Erwerb einer Microsoft Office Specialist Expert-Zertifizierung haben.
@@ -16,18 +16,19 @@ roles:
 - business-user
 type: mos
 products:
-- office-word
+- office
 exams:
 - uid: exam.77-726
+- uid: exam.77-728
 resources:
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über alle Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
-- title: Prüfungswiederholung
+- title: Prüfung wiederholen
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: deals.md
 - title: Unterstützung fur Zertifizierung
-  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Ein Forenmoderator wird an einem Werktag, Montag-Freitag, antworten.
+  description: Erhalten Sie Hilfe in Microsoft Support-Foren. Werktags (Montag-Freitag) wird Ihnen eine Forenmoderator antworten.
   href: help.md
 - title: Dashboard zur Zertifizierung
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
